# asymmetric_lp

./: .gitignore  ARCHITECTURE.md  BUILD_SYSTEM.md  CURSOR_FIX_SUMMARY.md  DEPENDENCIES.md  Dockerfile  INSTALL_DEPENDENCIES.md  LICENSE  Makefile  OHLC_DOWNLOADER_README.md  PRODUCTION_DEPLOYMENT.md  PROJECT_OVERVIEW.md  README.md  amm.py  automated_rebalancer.py  backtest_engine.py  chain_examples.env  check_initial_values.py  compare_models.py  config.py  detailed_model_analysis.py  docker-compose.yml  env.example  exchange_instr_config.ini  generate_sample_data.py  inventory_model.py  lp_position_manager.py  main.py  setup.py  simple_backtest.py  strategy.py  uniswap_client.py
cpp/: CMakeLists.txt  CONFIG_GUIDE.md  README.md  exchange_guide.md
cpp/config/: README.md  config.ini  position_server_deribit.ini  position_server_mock.ini  quote_server_binance.ini  quote_server_template.ini  quote_server_unified.ini  trader.ini  trading_engine_binance.ini  trading_engine_grvt.ini
cpp/examples/: api_endpoint_config_example.cpp  exchange_data_fetcher_example.cpp  process_architecture_example.cpp  simple_exchange_example.cpp
cpp/exch_handler/: CMakeLists.txt  binance_exchange_handler.cpp  config.example.ini  exchange_handler_factory.cpp  execution_handler_main.cpp
cpp/exchanges/: CMakeLists.txt  INTERFACES_DOCUMENTATION.md  exchange_handler.cpp  exchange_handler.hpp  exchange_handler_factory.cpp  i_exchange_data_fetcher.hpp  i_exchange_handler.hpp  i_exchange_oms.hpp  i_exchange_pms.hpp  i_exchange_subscriber.hpp  oms_factory.cpp  oms_factory.hpp  pms_factory.cpp  subscriber_factory.cpp  subscriber_factory.hpp
cpp/exchanges/binance/: binance_data_fetcher.cpp  binance_exchange_handler.hpp  binance_oms.cpp  binance_oms.hpp  binance_websocket_handlers.cpp  binance_websocket_handlers.hpp
cpp/exchanges/config/: CONFIG_GUIDE.md  api_endpoint_config.cpp  api_endpoint_config.hpp
cpp/market_server/: CMakeLists.txt  market_server_lib.cpp  market_server_lib.hpp  market_server_main.cpp  market_server_service.cpp
cpp/position_server/: CMakeLists.txt  config.example.ini  position_server_factory.cpp  position_server_factory.hpp  position_server_lib.cpp  position_server_lib.hpp  position_server_main.cpp  position_server_service.cpp
cpp/position_server/config/: position_server_binance.ini  position_server_template.ini
cpp/proto/: market_data.proto  order.proto
cpp/quote_server/: CMakeLists.txt  binance_exchange_manager.cpp  binance_exchange_manager.hpp  coinbase_exchange_manager.hpp  config.deribit.ini  config.example.ini  exchange_manager.cpp  exchange_manager.hpp  exchange_manager_factory.cpp  i_exchange_manager.hpp  quote_server.cpp  quote_server.hpp  quote_server_main.cpp
cpp/quote_server/config/: quote_server_deribit.ini
cpp/src/: grvt_client_stub.cpp  grvt_client_stub.hpp  main.cpp  zmq_subscriber.cpp
cpp/strategies/: CMakeLists.txt
cpp/strategies/base_strategy/: abstract_strategy.cpp  abstract_strategy.hpp
cpp/strategies/mm_strategy/: market_making_strategy.cpp  market_making_strategy.hpp  market_making_strategy_config.cpp  market_making_strategy_config.hpp
cpp/tests/: ADDITIONAL_TESTS.md  CMakeLists.txt  CMakeLists_minimal.txt  CTestTestfile.cmake  README.md  TEST_COVERAGE_REPORT.md  simple_test.cpp  test_config.ini  test_runner.cpp  test_runner_standalone.cpp
cpp/tests/config/: test_config_manager_standalone.cpp  test_exchange_config.ini
cpp/tests/integration/: CMakeLists.txt  dummy_strategy.hpp  integration_test_main.cpp  mock_exchange.hpp  mock_exchange_websocket_handler.cpp  mock_exchange_websocket_handler.hpp  mock_libuv.cpp  mock_libuv.hpp  test_binance_exchange.cpp  test_container.hpp  test_deribit_full_flow.cpp  test_full_chain_integration.cpp  test_grvt_full_flow.cpp  test_integration.cpp  test_order_flow_integration.cpp  test_position_flow_integration.cpp  test_strategy.cpp  test_strategy.hpp  websocket_transport_test.cpp
cpp/tests/mocks/: mock_websocket_handler.cpp  mock_websocket_handler.hpp  mock_websocket_transport.cpp
cpp/tests/performance/: test_performance.cpp
cpp/tests/security/: test_security.cpp
cpp/tests/standalone_build/: CMakeLists.txt  CTestTestfile.cmake  basic_tests.cpp  run_tests  test_config_manager_standalone.cpp  test_protocol_buffers_standalone.cpp
cpp/trader/: CMakeLists.txt  config.custom_handlers.ini  config.enhanced.ini  config.example.ini  config.ini  config.message_handlers.ini  config.production.ini  enhanced_trader_main.cpp  glft_market_maker.hpp  i_oms.hpp  main.cpp  market_making_strategy.cpp  market_making_strategy.hpp  mini_oms.cpp  mini_oms.hpp  mini_pms.cpp  multi_exchange_oms.cpp  multi_exchange_oms.hpp  oms_factory.cpp  production_trader_main.cpp  strategy_container.cpp  strategy_container.hpp  trader_lib.cpp  trader_lib.hpp  trader_main.cpp  zmq_defi_delta_adapter.hpp  zmq_mds_adapter.hpp  zmq_oms.cpp  zmq_oms_adapter.cpp  zmq_oms_adapter.hpp  zmq_pms_adapter.hpp
cpp/trader/models/: glft_target.hpp
cpp/trading_engine/: CMakeLists.txt  README.md  main.cpp  trading_engine.cpp  trading_engine.hpp  trading_engine_lib.cpp  trading_engine_lib.hpp  trading_engine_service.cpp
cpp/trading_engine/config/: trading_engine_deribit.ini  trading_engine_template.ini
cpp/utils/: CMakeLists.txt
cpp/utils/app_service/: app_service.cpp
cpp/utils/config/: config.hpp  process_config_manager.cpp  process_config_manager.hpp
cpp/utils/exchange/: exchange_symbol_info.hpp  exchange_symbol_registry.cpp  exchange_symbol_registry.hpp
cpp/utils/handlers/: message_handler.cpp  message_handler_manager.cpp
cpp/utils/http/: curl_http_handler.hpp
cpp/utils/mds/: market_data.hpp  market_data_normalizer.cpp  market_data_normalizer.hpp  md_zmq_adapter.hpp  parser_factory.cpp
cpp/utils/oms/: enhanced_exchange_oms.hpp  enhanced_mock_exchange_oms.hpp  enhanced_oms.cpp  enhanced_oms.hpp  exchange_monitor.cpp  exchange_monitor.hpp  exchange_oms_factory.cpp  exchange_oms_factory.hpp  mock_exchange_oms.cpp  mock_exchange_oms.hpp  order.hpp  order_binary.cpp  order_manager.cpp
cpp/utils/pms/: position_feed.cpp  position_feed.hpp  (+2 more)
(+151 files in other folders)
